add content to help page

--- a/src/main/resources/viewer/Help.html
+++ b/src/main/resources/viewer/Help.html
@@ -132,8 +132,29 @@ in viewer windows to indicate that you are in landmark mode.
 <table border="1">
 <tr>
   <td class="a"><b>Space bar</b><br/>(press and hold)</td>
-  <td>Enter <i>landmark mode</i></td>
-</tr></table>
+  <td>Enter <i>landmark mode.</i></td>
+</tr>
+<tr>
+<td class="a">(<i>landmark mode</i>) + ( mouse click )</td>
+  <td>Place landmark point.</td>
+</tr>
+<tr>
+<td class="a">(<i>landmark mode</i>) + ( mouse drag )</td>
+  <td>Drag landmark point.</td>
+</tr>
+<tr>
+<td class="a">(<i>landmark mode</i>) + click point in table.</td>
+  <td>Clears a point's position.  Next landmark-click resets position.</td>
+</tr>
+<tr>
+<td class="a">Double click point in table.</td>
+  <td>Center landmark point in viewer.</td>
+</tr>
+<tr>
+  <td class="a">(<i>landmark mode</i>) + <b>C</b></td>
+  <td>Compute the warping transformation.</td>
+</tr>
+</table>
 <br/>
 
 </body>
