Moved warp visualization to its own dialog. * Various improvements to visualization of the warp. ** Grid looks better ** Warp magnitude estimates the max warp and automatically sets converter max * Update Help page

--- a/src/main/resources/viewer/Help.html
+++ b/src/main/resources/viewer/Help.html
@@ -60,8 +60,8 @@ In <i>fused</i> mode, all <i>active</i> sources are shown overlaid.
   <td class="a"><b>S</b></td>
   <td>Show Brightness &amp; Color dialog.</td>
 </tr><tr>
-  <td class="a"><b>M&nbsp;</b></td>
-  <td>Toggle whether the magnitude of the warp is displayed as an overlay.</td>
+  <td class="a"><b>G&nbsp;</b></td>
+  <td>Show warp visualization grid dialog.</td>
 </tr>
 
 </table>
