Add capability to add a fixed landmark pair
A ctrl-click now adds a landmark in both the moving
and target image at the same position.

--- a/src/main/resources/viewer/BigWarpHelp.html
+++ b/src/main/resources/viewer/BigWarpHelp.html
@@ -92,7 +92,7 @@ Using the keyboard:
 <table border="1">
 <tr>
   <td class="a"><b>Q&nbsp;<i>key</i></b></td>
-  <td>Align the non-active viewer with the active viewer</td>
+  <td>Align the non-active viewer with the active viewer.</td>
 </tr><tr>
   <td class="a"><b>W&nbsp;<i>key</i></b></td>
   <td>Align the active viewer with the non-active viewer.</td>
@@ -152,6 +152,11 @@ in viewer windows to indicate that you are in landmark mode.
   <td class="a"><b>Shift</b> + (<i>landmark mode</i>) + ( mouse drag )</td>
   <td>"Move" a point. <br>Click to place a landmark in the moving image
     space, drag to move a landmark in the fixed image, release to set the fixed image landmark.</td>
+</tr>
+<tr>
+  <td class="a"><b>Ctrl</b> + (<i>landmark mode</i>) + ( mouse click )</td>
+  <td>"Fix" a point. <br>Click to place a landmark in both the fixed and
+    moving images, at the clicked position.</td>
 </tr>
 <tr>
 <td class="a">(<i>landmark mode</i>) + click point in table.</td>
