add undo/redo and warp behavior hotkeys to help page

--- a/src/main/resources/viewer/BigWarpHelp.html
+++ b/src/main/resources/viewer/BigWarpHelp.html
@@ -57,6 +57,10 @@ In <i>fused</i> mode, all <i>active</i> sources are shown overlaid.
   <td class="a"><b>T&nbsp;</b></td>
   <td>Toggle whether moving image is displayed warped or raw. </td>
 </tr><tr>
+  <td class="a"><b>F3&nbsp;</b></td>
+  <td>Toggle whether transform is estimated after every change to a
+    landmark point.</td>
+</tr><tr>
   <td class="a"><b>S</b></td>
   <td>Show Brightness &amp; Color dialog.</td>
 </tr><tr>
@@ -168,7 +172,15 @@ in viewer windows to indicate that you are in landmark mode.
 </tr>
 <tr>
   <td class="a">(<i>landmark mode</i>) + <b>C</b></td>
-  <td>Compute the warping transformation.</td>
+  <td>Force computation the warping transformation.</td>
+</tr>
+<tr>
+  <td class="a"><b>Ctrl&nbsp;Z</b></td>
+  <td>Undo last change to a landmark point.</td>
+</tr>
+<tr>
+  <td class="a"><b>Ctrl&nbsp;Y</b></td>
+  <td>Redo last undone change to a landmark point.</td>
 </tr>
 </table>
 <br/>
