Updated help page

--- a/src/main/resources/viewer/BigWarpHelp.html
+++ b/src/main/resources/viewer/BigWarpHelp.html
@@ -57,10 +57,6 @@ In <i>fused</i> mode, all <i>active</i> sources are shown overlaid.
   <td class="a"><b>T&nbsp;</b></td>
   <td>Toggle whether moving image is displayed warped or raw. </td>
 </tr><tr>
-  <td class="a"><b>F3&nbsp;</b></td>
-  <td>Toggle whether transform is estimated after every change to a
-    landmark point.</td>
-</tr><tr>
   <td class="a"><b>S</b></td>
   <td>Show Brightness &amp; Color dialog.</td>
 </tr><tr>
@@ -145,34 +141,30 @@ in viewer windows to indicate that you are in landmark mode.
   <td>Enter <i>landmark mode.</i></td>
 </tr>
 <tr>
-<td class="a">(<i>landmark mode</i>) + ( mouse click )</td>
+<td class="a">(<b>Space bar</b>) + ( mouse click )</td>
   <td>Place landmark point.</td>
 </tr>
 <tr>
-<td class="a">(<i>landmark mode</i>) + ( mouse drag )</td>
-  <td>Drag landmark point.</td>
+<td class="a">(<b>Space bar</b>) + ( mouse click and drag )</td>
+  <td>Drag an existing landmark point.</td>
 </tr>
 <tr>
-  <td class="a"><b>Shift</b> + (<i>landmark mode</i>) + ( mouse drag )</td>
+  <td class="a">(<b>Space bar</b>) + <b>Shift</b> + ( mouse drag )</td>
   <td>"Move" a point. <br>Click to place a landmark in the moving image
     space, drag to move a landmark in the fixed image, release to set the fixed image landmark.</td>
 </tr>
 <tr>
-  <td class="a"><b>Ctrl</b> + (<i>landmark mode</i>) + ( mouse click )</td>
+  <td class="a">(<b>Space bar</b>) + <b>Ctrl</b> + ( mouse click )</td>
   <td>"Fix" a point. <br>Click to place a landmark in both the fixed and
     moving images, at the clicked position.</td>
 </tr>
 <tr>
-<td class="a">(<i>landmark mode</i>) + click point in table.</td>
+<td class="a">(<b>Space bar</b>) + click point in table.</td>
   <td>Clears a point's position.  Next landmark-click resets position.</td>
 </tr>
 <tr>
 <td class="a">Double click point in table.</td>
   <td>Center landmark point in viewer.</td>
-</tr>
-<tr>
-  <td class="a">(<i>landmark mode</i>) + <b>C</b></td>
-  <td>Force computation the warping transformation.</td>
 </tr>
 <tr>
   <td class="a"><b>Ctrl&nbsp;Z</b></td>
