--- a/src/main/resources/viewer/BigWarpHelp.html
+++ b/src/main/resources/viewer/BigWarpHelp.html
@@ -51,6 +51,9 @@ In <i>fused</i> mode, all <i>active</i> sources are shown overlaid.
   <td class="a"><b>F</b></td>
   <td>Switch between <i>single-source</i> and <i>fused</i> mode.</td>
 </tr><tr>
+  <td class="a"><b>G</b></td>
+  <td>Toggle source <i>grouping</i>.</td>
+</tr><tr>
   <td class="a"><b>I</b></td>
   <td>Switch between tri-linear and nearest-neighbor interpolation.</td>
 </tr><tr>
@@ -60,7 +63,13 @@ In <i>fused</i> mode, all <i>active</i> sources are shown overlaid.
   <td class="a"><b>S</b></td>
   <td>Show Brightness &amp; Color dialog.</td>
 </tr><tr>
-  <td class="a"><b>G&nbsp;</b></td>
+  <td class="a"><b>F6</b></td>
+  <td>Show moving image panel Visibility &amp; and Grouping dialog.</td>
+</tr><tr>
+  <td class="a"><b>F7</b></td>
+  <td>Show target image panel Visibility &amp; and Grouping dialog.</td>
+</tr><tr>
+  <td class="a"><b>U&nbsp;</b></td>
   <td>Show warp visualization grid dialog.</td>
 </tr>
 
