update help with new hotkeys

--- a/src/main/resources/viewer/BigWarpHelp.html
+++ b/src/main/resources/viewer/BigWarpHelp.html
@@ -109,6 +109,18 @@ Using the keyboard:
   <td class="a"><b>R&nbsp;<i>key</i></b></td>
   <td>Resets view to origin.</td>
 </tr><tr>
+  <td class="a"><b>D&nbsp;<i>key</i></b></td>
+  <td>Centers the active viewer on the currently selected landmark.</td>
+</tr><tr>
+  <td class="a"><b>Ctrl&nbsp;D</b></td>
+  <td>Centers the active viewer on the next selected landmark.</td>
+</tr><tr>
+  <td class="a"><b>Ctrl-Shift&nbsp;D</b></td>
+  <td>Centers the active viewer on the previous selected landmark.</td>
+</tr><tr>
+  <td class="a"><b>E&nbsp;<i>key</i></b></td>
+  <td>Centers the active viewer on landmark closest to the mouse.</td>
+</tr><tr>
   <td class="a"><b>X</b> / <b>Y</b> / <b>Z</b></td>
   <td>Select rotation axis.</td>
 </tr><tr>
