Changes and fixes to menu options
Menus now seem to work on mac

Add keyboard shortcuts

--- a/src/main/resources/viewer/BigWarpHelp.html
+++ b/src/main/resources/viewer/BigWarpHelp.html
@@ -71,8 +71,19 @@ In <i>fused</i> mode, all <i>active</i> sources are shown overlaid.
 </tr><tr>
   <td class="a"><b>U&nbsp;</b></td>
   <td>Show warp visualization grid dialog.</td>
+</tr><tr>
+  <td class="a"><b>Ctrl&nbsp;O</b></td>
+  <td>Open landmarks from a file</td>
+</tr><tr>
+  <td class="a"><b>Ctrl&nbsp;S</b></td>
+  <td>Save landmarks to a file</td>
+</tr><tr>
+  <td class="a"><b>Ctrl&nbsp;E</b></td>
+  <td>Export moving image as an ImagePlus</td>
+</tr><tr>
+  <td class="a"><b>Ctrl-Shift&nbsp;E</b></td>
+  <td>Export moving image as a virtual ImagePlus</td>
 </tr>
-
 </table>
 <br/>
 
