Add landmark visibility hotkeys to help page

--- a/src/main/resources/viewer/BigWarpHelp.html
+++ b/src/main/resources/viewer/BigWarpHelp.html
@@ -206,6 +206,14 @@ in viewer windows to indicate that you are in landmark mode.
   <td class="a"><b>Ctrl&nbsp;Y</b></td>
   <td>Redo last undone change to a landmark point.</td>
 </tr>
+<tr>
+  <td class="a"><b>V</b></td>
+  <td>Toggle landmark visibility.</td>
+</tr>
+<tr>
+  <td class="a"><b>N</b></td>
+  <td>Toggle landmark name visibility.</td>
+</tr>
 </table>
 <br/>
 
