docs: Update help page
With new hotkeys for saving warped image directly

--- a/src/main/resources/viewer/BigWarpHelp.html
+++ b/src/main/resources/viewer/BigWarpHelp.html
@@ -83,6 +83,9 @@ In <i>fused</i> mode, all <i>active</i> sources are shown overlaid.
 </tr><tr>
   <td class="a"><b>Ctrl-Shift&nbsp;E</b></td>
   <td>Export moving image as a virtual ImagePlus</td>
+</tr><tr>
+  <td class="a"><b>Ctrl-Alt&nbsp;E</b></td>
+  <td>Save warped moving image to file</td>
 </tr>
 </table>
 <br/>
