add transform type selection dialog to help

--- a/src/main/resources/viewer/BigWarpHelp.html
+++ b/src/main/resources/viewer/BigWarpHelp.html
@@ -69,6 +69,9 @@ In <i>fused</i> mode, all <i>active</i> sources are shown overlaid.
   <td class="a"><b>F7</b></td>
   <td>Show target image panel Visibility &amp; and Grouping dialog.</td>
 </tr><tr>
+  <td class="a"><b>F8</b></td>
+  <td>Show transform type selection dialog.</td>
+</tr><tr>
   <td class="a"><b>U&nbsp;</b></td>
   <td>Show warp visualization grid dialog.</td>
 </tr><tr>
