edits to help page

--- a/src/main/resources/viewer/BigWarpHelp.html
+++ b/src/main/resources/viewer/BigWarpHelp.html
@@ -122,9 +122,13 @@ Using the keyboard:
 <tr>
   <td class="a"><b>Q&nbsp;<i>key</i></b></td>
   <td>Align the non-active viewer with the active viewer.</td>
-</tr><tr>
+</tr>
+<tr>
   <td class="a"><b>W&nbsp;<i>key</i></b></td>
   <td>Align the active viewer with the non-active viewer.</td>
+<tr>
+  <td class="a"><b>E&nbsp;<i>key</i></b></td>
+  <td>Center the viewer at the nearest landmark (in 3d)</td>
 </tr><tr>
   <td class="a"><b>R&nbsp;<i>key</i></b></td>
   <td>Resets view to origin.</td>
@@ -137,10 +141,8 @@ Using the keyboard:
 </tr><tr>
   <td class="a"><b>Ctrl-Shift&nbsp;D</b></td>
   <td>Centers the active viewer on the previous selected landmark.</td>
-</tr><tr>
-  <td class="a"><b>E&nbsp;<i>key</i></b></td>
-  <td>Centers the active viewer on landmark closest to the mouse.</td>
-</tr><tr>
+</tr>
+<tr>
   <td class="a"><b>X</b> / <b>Y</b> / <b>Z</b></td>
   <td>Select rotation axis.</td>
 </tr><tr>
@@ -182,26 +184,26 @@ in viewer windows to indicate that you are in landmark mode.
   <td>Enter <i>landmark mode.</i></td>
 </tr>
 <tr>
-<td class="a">(<b>Space bar</b>) + ( mouse click )</td>
+<td class="a">(<b>Landmark mode</b>) + ( left click )</td>
   <td>Place landmark point.</td>
 </tr>
 <tr>
-<td class="a">(<b>Space bar</b>) + ( mouse click and drag )</td>
+<td class="a">(<b>Landmark mode</b>) + ( left click-drag a landmark)</td>
   <td>Drag an existing landmark point.</td>
 </tr>
 <tr>
-  <td class="a">(<b>Space bar</b>) + <b>Shift</b> + ( mouse drag )</td>
+  <td class="a">(<b>Landmark mode</b>) + <b>Shift</b> + ( mouse drag )</td>
   <td>"Move" a point. <br>Click to place a landmark in the moving image
     space, drag to move a landmark in the fixed image, release to set the fixed image landmark.</td>
 </tr>
 <tr>
-  <td class="a">(<b>Space bar</b>) + <b>Ctrl</b> + ( mouse click )</td>
+  <td class="a">(<b>Landmark mode</b>) + <b>Ctrl</b> + ( mouse click )</td>
   <td>"Fix" a point. <br>Click to place a landmark in both the fixed and
     moving images, at the clicked position.</td>
 </tr>
 <tr>
-<td class="a">(<b>Space bar</b>) + click point in table.</td>
-  <td>Clears a point's position.  Next landmark-click resets position.</td>
+<td class="a">Right-click  point in table.</td>
+  <td>Bring up menu for deleting / activating landmark points</td>
 </tr>
 <tr>
 <td class="a">Double click point in table.</td>
