Add actions for printing affine part of transform.
see #71

--- a/src/main/resources/viewer/BigWarpHelp.html
+++ b/src/main/resources/viewer/BigWarpHelp.html
@@ -86,12 +86,22 @@ In <i>fused</i> mode, all <i>active</i> sources are shown overlaid.
 </tr><tr>
   <td class="a"><b>Ctrl&nbsp;E</b></td>
   <td>Export moving image as an ImagePlus</td>
-</tr><tr>
+</tr>
+<tr>
   <td class="a"><b>Ctrl-Shift&nbsp;E</b></td>
   <td>Export moving image as a virtual ImagePlus</td>
-</tr><tr>
+</tr>
+<tr>
   <td class="a"><b>Ctrl-Alt&nbsp;E</b></td>
   <td>Save warped moving image to file</td>
+</tr>
+<tr>
+  <td class="a"><b>Ctrl&nbsp;W</b></td>
+  <td>Export displacement (warp) field as an ImagePlus.</td>
+</tr>
+<tr>
+  <td class="a"><b>Ctrl&nbsp;A</b></td>
+  <td>Print affine transformation (or affine part of warp transformation) to the log / terminal.</td>
 </tr>
 </table>
 <br/>
