correct landmark mode description in help window

--- a/src/main/resources/viewer/BigWarpHelp.html
+++ b/src/main/resources/viewer/BigWarpHelp.html
@@ -184,14 +184,14 @@ Hold <b>Ctrl</b> to rotate and browse 10x slower.
 
 <h2>Landmark placement and navigation</h2>
 <p>
-Landmarks are placed in <i>landmark mode</i> which is entered by
-pressing and holding the <i>space bar</i>.  A message is briefly displayed
+Landmarks are placed in <i>landmark mode</i> which is toggled by
+pressing the <i>space bar</i>.  A message is briefly displayed
 in viewer windows to indicate that you are in landmark mode.
 </p>
 <table border="1">
 <tr>
-  <td class="a"><b>Space bar</b><br/>(press and hold)</td>
-  <td>Enter <i>landmark mode.</i></td>
+  <td class="a"><b>Space bar</b><br/></td>
+  <td>Toggle <i>landmark mode</i> (press to enter, press again to exit).</td>
 </tr>
 <tr>
 <td class="a">(<b>Landmark mode</b>) + ( left click )</td>
