Section about landmark warning in help
see #73

--- a/src/main/resources/viewer/BigWarpHelp.html
+++ b/src/main/resources/viewer/BigWarpHelp.html
@@ -238,5 +238,22 @@ in viewer windows to indicate that you are in landmark mode.
 </table>
 <br/>
 
+<h2>Landmark table warnings</h2>
+<p>
+If your transformation unstable (or close to), BigWarp may not be able to correctly display landmarks on the warped moving image.
+The name of a landmark in the table will be highlighted yellow.
+
+<h3>Possible fixes</h3>
+
+See the <a href="https://imagej.net/BigWarp">BigWarp wiki page</a> for details.
+
+<ul>
+	<li>Modify landmarks</li>
+	<li>Increase "Max iterations" in Setting > BigWarp Options window </li>
+	<li>Increase "Inverse error" in Setting > BigWarp Options window </li>
+</ul> 
+ 
+</p>
+
 </body>
 </html>
