HELP: add landmark table actions

--- a/src/main/resources/viewer/BigWarpHelp.html
+++ b/src/main/resources/viewer/BigWarpHelp.html
@@ -238,6 +238,47 @@ in viewer windows to indicate that you are in landmark mode.
 </table>
 <br/>
 
+<h2>Landmark selection and editing</h2>
+<table border="1">
+<tr>
+  <td class="a">(left-mouse-click)</td>
+  <td>Select row.</td>
+</tr>
+<tr>
+  <td class="a"><b>Ctrl</b> + (left-mouse-click)</td>
+  <td>Add row to selection.</td>
+</tr>
+<tr>
+  <td class="a"><b>Shift</b> + (left-mouse-click)</td>
+  <td>Select range of rows.</td>
+</tr>
+<tr>
+  <td class="a"><b>Escape</b></td>
+  <td>Deselect all rows.</td>
+</tr>
+<tr>
+  <td class="a">(right-mouse-click) &#8594; "Delete" </td>
+  <td>Delete all selected row(s).</td>
+</tr>
+<tr>
+  <td class="a">(right-mouse-click) &#8594; "Clear moving"  </td>
+  <td>Deletes only the moving landmark point.</td>
+</tr>
+<tr>
+  <td class="a">(right-mouse-click) &#8594; "Clear fixed"  </td>
+  <td>Deletes only the fixed landmark point.</td>
+</tr>
+<tr>
+  <td class="a">(right-mouse-click) &#8594; "Activate"  </td>
+  <td>Activates all selected landmark pairs.</td>
+</tr>
+<tr>
+  <td class="a">(right-mouse-click) &#8594; "Deactivate"  </td>
+  <td>Deactivates all selected landmark pairs.</td>
+</tr>
+
+</table>
+
 <h2>Landmark table warnings</h2>
 <p>
 If your transformation unstable (or close to), BigWarp may not be able to correctly display landmarks on the warped moving image.
