HELP: fix shortcuts for export
see #76

--- a/src/main/resources/viewer/BigWarpHelp.html
+++ b/src/main/resources/viewer/BigWarpHelp.html
@@ -85,15 +85,7 @@ In <i>fused</i> mode, all <i>active</i> sources are shown overlaid.
   <td>Save landmarks to a file</td>
 </tr><tr>
   <td class="a"><b>Ctrl&nbsp;E</b></td>
-  <td>Export moving image as an ImagePlus</td>
-</tr>
-<tr>
-  <td class="a"><b>Ctrl-Shift&nbsp;E</b></td>
-  <td>Export moving image as a virtual ImagePlus</td>
-</tr>
-<tr>
-  <td class="a"><b>Ctrl-Alt&nbsp;E</b></td>
-  <td>Save warped moving image to file</td>
+  <td>Export the transformed moving image. </td>
 </tr>
 <tr>
   <td class="a"><b>Ctrl&nbsp;W</b></td>
