Save current transform as affine3d xml

--- a/src/main/resources/viewer/BigWarpHelp.html
+++ b/src/main/resources/viewer/BigWarpHelp.html
@@ -86,8 +86,10 @@ In <i>fused</i> mode, all <i>active</i> sources are shown overlaid.
 </tr><tr>
   <td class="a"><b>Ctrl&nbsp;E</b></td>
   <td>Export the transformed moving image. </td>
-</tr>
-<tr>
+</tr><tr>
+  <td class="a"><b>Ctrl&nbsp;Shift E</b></td>
+  <td>Export a BDV/XML of the transformed moving image. </td>
+</tr><tr>
   <td class="a"><b>Ctrl&nbsp;W</b></td>
   <td>Export displacement (warp) field as an ImagePlus.</td>
 </tr>
