--- a/src/main/resources/viewer/BigWarpHelp.html
+++ b/src/main/resources/viewer/BigWarpHelp.html
@@ -60,7 +60,7 @@ In <i>fused</i> mode, all <i>active</i> sources are shown overlaid.
   <td class="a"><b>T&nbsp;</b></td>
   <td>Toggle whether moving image is displayed warped or raw. </td>
 </tr><tr>
-  <td class="a"><b>P&nbsp;</b></td>
+  <td class="a"><b>Ctrl&nbsp Shift T&nbsp;</b></td>
   <td>Print a representation of the transformation.</td>
 </tr><tr>
   <td class="a"><b>S</b></td>
