add landmark quicksave, auto-save

--- a/src/main/resources/viewer/BigWarpHelp.html
+++ b/src/main/resources/viewer/BigWarpHelp.html
@@ -92,6 +92,9 @@ In <i>fused</i> mode, all <i>active</i> sources are shown overlaid.
   <td class="a"><b>Ctrl&nbsp;S</b></td>
   <td>Save landmarks to a file</td>
 </tr><tr>
+  <td class="a"><b>Ctrl&nbsp;Q</b></td>
+  <td>Quick save landmarks</td>
+</tr><tr>
   <td class="a"><b>Ctrl&nbsp;E</b></td>
   <td>Export the transformed moving image. </td>
 </tr><tr>
