fix: image export hotkey
* some changes to BigWarpActions

--- a/src/main/resources/viewer/BigWarpHelp.html
+++ b/src/main/resources/viewer/BigWarpHelp.html
@@ -126,7 +126,7 @@ In <i>fused</i> mode, all <i>active</i> sources are shown overlaid.
   <td>Export displacement (warp) field as an ImagePlus.</td>
 </tr>
 <tr>
-  <td class="a"><b>Ctrl&nbsp;A</b></td>
+  <td class="a"><b>F5</b></td>
   <td>Print affine transformation (or affine part of warp transformation) to the log / terminal.</td>
 </tr>
 </table>
