Update imagej.net URLs

--- a/src/main/resources/viewer/BigWarpHelp.html
+++ b/src/main/resources/viewer/BigWarpHelp.html
@@ -312,7 +312,7 @@ The name of a landmark in the table will be highlighted yellow.
 
 <h3>Possible fixes</h3>
 
-See the <a href="https://imagej.net/BigWarp">BigWarp wiki page</a> for details.
+See the <a href="https://imagej.net/plugins/bigwarp">BigWarp wiki page</a> for details.
 
 <ul>
 	<li>Modify landmarks</li>
